<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="#fdf8f0">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_detail_poster"
                android:paddingVertical="2dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:text="@string/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#0000EE" />
            <TextView
                android:id="@+id/tv_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#454545"
                android:textSize="16sp" />


            <TextView
                android:text="@string/original_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#0000EE"/>
            <TextView
                android:id="@+id/tv_detail_original_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#454545"
                android:textSize="16sp" />


            <TextView
                android:text="@string/overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#0000EE"/>
            <TextView
                android:id="@+id/tv_detail_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#454545"
                android:textSize="16sp" />


            <TextView
                android:text="@string/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#0000EE" />
            <TextView
                android:id="@+id/tv_detail_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#454545"
                android:textSize="16sp" />


            <TextView
                android:text="@string/vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#0000EE"/>
            <TextView
                android:id="@+id/tv_detail_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#454545"
                android:textSize="16sp" />


            <TextView
                android:text="@string/popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#0000EE"/>
            <TextView
                android:id="@+id/tv_detail_popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#454545"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
